Improve logging (add MDC etc)